src/main/csel/parser/.antlr/CSELParser.py
# Generated from /home/long/Documents/PPL/ass1.1/assignment1/initial/src/main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "'Break'", "'Continue'", "'If'", "'Elif'", "'Else'", 
                     "'While'", "'For'", "'Of'", "'In'", "'Function'", "'Let'", 
                     "'True'", "'False'", "'Call'", "'Return'", "'Number'", 
                     "'Boolean'", "'String'", "'JSON'", "'Array'", "'Constant'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'<'", "'>'", "'='", "'=='", "'>='", "'<='", "'!='", 
                     "'('", "')'", "'['", "']'", "':'", "'.'", "','", "'{'", 
                     "'}'", "'+.'", "'==.'" ]

    symbolicNames = [ "<INVALID>", "DATA_TYPE", "ID_VARIABLE", "ID_CONSTANT", 
                      "ID", "NUM_LIT", "BOOLEAN_LIT", "STRING_LIT", "COMMENT", 
                      "UNTERMINATED_COMMENT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "SEMICOLON", "BREAK", "CONTINUE", "IF", "ELIF", "ELSE", 
                      "WHILE", "FOR", "OF", "IN", "FUNCTION", "LET", "TRUE", 
                      "FALSE", "CALL", "RETURN", "NUMBER", "BOOLEAN", "STRING", 
                      "JSON", "ARRAY", "CONSTANT", "ADD", "MINUS", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "LESS_THAN", "GREATER_THAN", 
                      "ASSIGN", "EQUALS", "GTE", "LTE", "NOT_EQ", "LP", 
                      "RP", "LSB", "RSB", "COLON", "DOT", "COMMA", "LCB", 
                      "RCB", "ADD_DOT", "DEQUAL_DOT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_var_dec = 2
    RULE_arr_dec = 3
    RULE_const_dec = 4
    RULE_const_arr_dec = 5
    RULE_assignment = 6
    RULE_if_statement = 7
    RULE_for_statement = 8
    RULE_while_statement = 9
    RULE_fun_dec = 10
    RULE_params = 11
    RULE_exp = 12
    RULE_exp1 = 13
    RULE_exp2 = 14
    RULE_exp3 = 15
    RULE_exp4 = 16
    RULE_exp5 = 17
    RULE_exp6 = 18
    RULE_exp7 = 19
    RULE_exp8 = 20
    RULE_exp9 = 21
    RULE_key_words = 22
    RULE_index_operators = 23
    RULE_index_operand = 24
    RULE_key_operators = 25
    RULE_key_operand = 26
    RULE_call_statement = 27
    RULE_arr_lit = 28
    RULE_arr_element = 29
    RULE_json_lit = 30
    RULE_json_element = 31
    RULE_id_arr = 32
    RULE_id_arr_const = 33
    RULE_num_lit = 34

    ruleNames =  [ "program", "statements", "var_dec", "arr_dec", "const_dec", 
                   "const_arr_dec", "assignment", "if_statement", "for_statement", 
                   "while_statement", "fun_dec", "params", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", 
                   "exp9", "key_words", "index_operators", "index_operand", 
                   "key_operators", "key_operand", "call_statement", "arr_lit", 
                   "arr_element", "json_lit", "json_element", "id_arr", 
                   "id_arr_const", "num_lit" ]

    EOF = Token.EOF
    DATA_TYPE=1
    ID_VARIABLE=2
    ID_CONSTANT=3
    ID=4
    NUM_LIT=5
    BOOLEAN_LIT=6
    STRING_LIT=7
    COMMENT=8
    UNTERMINATED_COMMENT=9
    ILLEGAL_ESCAPE=10
    UNCLOSE_STRING=11
    SEMICOLON=12
    BREAK=13
    CONTINUE=14
    IF=15
    ELIF=16
    ELSE=17
    WHILE=18
    FOR=19
    OF=20
    IN=21
    FUNCTION=22
    LET=23
    TRUE=24
    FALSE=25
    CALL=26
    RETURN=27
    NUMBER=28
    BOOLEAN=29
    STRING=30
    JSON=31
    ARRAY=32
    CONSTANT=33
    ADD=34
    MINUS=35
    MUL=36
    DIV=37
    MOD=38
    NOT=39
    AND=40
    OR=41
    LESS_THAN=42
    GREATER_THAN=43
    ASSIGN=44
    EQUALS=45
    GTE=46
    LTE=47
    NOT_EQ=48
    LP=49
    RP=50
    LSB=51
    RSB=52
    COLON=53
    DOT=54
    COMMA=55
    LCB=56
    RCB=57
    ADD_DOT=58
    DEQUAL_DOT=59
    WS=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.StatementsContext)
            else:
                return self.getTypedRuleContext(CSELParser.StatementsContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.statements()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.ID_VARIABLE) | (1 << CSELParser.ID_CONSTANT) | (1 << CSELParser.ID) | (1 << CSELParser.BREAK) | (1 << CSELParser.CONTINUE) | (1 << CSELParser.IF) | (1 << CSELParser.WHILE) | (1 << CSELParser.FOR) | (1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CALL) | (1 << CSELParser.RETURN) | (1 << CSELParser.CONSTANT))) != 0)):
                    break

            self.state = 75
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(CSELParser.Var_decContext,0)


        def arr_dec(self):
            return self.getTypedRuleContext(CSELParser.Arr_decContext,0)


        def const_dec(self):
            return self.getTypedRuleContext(CSELParser.Const_decContext,0)


        def const_arr_dec(self):
            return self.getTypedRuleContext(CSELParser.Const_arr_decContext,0)


        def fun_dec(self):
            return self.getTypedRuleContext(CSELParser.Fun_decContext,0)


        def assignment(self):
            return self.getTypedRuleContext(CSELParser.AssignmentContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(CSELParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(CSELParser.For_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(CSELParser.While_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(CSELParser.Call_statementContext,0)


        def SEMICOLON(self):
            return self.getToken(CSELParser.SEMICOLON, 0)

        def key_words(self):
            return self.getTypedRuleContext(CSELParser.Key_wordsContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_statements




    def statements(self):

        localctx = CSELParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.var_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.arr_dec()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.const_dec()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.const_arr_dec()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.fun_dec()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 83
                self.if_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.for_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 85
                self.while_statement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 86
                self.call_statement()
                self.state = 87
                self.match(CSELParser.SEMICOLON)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 89
                self.key_words()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def SEMICOLON(self):
            return self.getToken(CSELParser.SEMICOLON, 0)

        def ID_VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ID_VARIABLE)
            else:
                return self.getToken(CSELParser.ID_VARIABLE, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COLON)
            else:
                return self.getToken(CSELParser.COLON, i)

        def DATA_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.DATA_TYPE)
            else:
                return self.getToken(CSELParser.DATA_TYPE, i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ASSIGN)
            else:
                return self.getToken(CSELParser.ASSIGN, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ExpContext)
            else:
                return self.getTypedRuleContext(CSELParser.ExpContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_dec




    def var_dec(self):

        localctx = CSELParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(CSELParser.LET)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 93
                    self.match(CSELParser.ID_VARIABLE)
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.COLON:
                        self.state = 94
                        self.match(CSELParser.COLON)
                        self.state = 95
                        self.match(CSELParser.DATA_TYPE)


                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.ASSIGN:
                        self.state = 98
                        self.match(CSELParser.ASSIGN)
                        self.state = 99
                        self.exp()


                    self.state = 102
                    self.match(CSELParser.COMMA) 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 108
            self.match(CSELParser.ID_VARIABLE)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 109
                self.match(CSELParser.COLON)
                self.state = 110
                self.match(CSELParser.DATA_TYPE)


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 113
                self.match(CSELParser.ASSIGN)
                self.state = 114
                self.exp()


            self.state = 117
            self.match(CSELParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def SEMICOLON(self):
            return self.getToken(CSELParser.SEMICOLON, 0)

        def id_arr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Id_arrContext)
            else:
                return self.getTypedRuleContext(CSELParser.Id_arrContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COLON)
            else:
                return self.getToken(CSELParser.COLON, i)

        def DATA_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.DATA_TYPE)
            else:
                return self.getToken(CSELParser.DATA_TYPE, i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ASSIGN)
            else:
                return self.getToken(CSELParser.ASSIGN, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ExpContext)
            else:
                return self.getTypedRuleContext(CSELParser.ExpContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_arr_dec




    def arr_dec(self):

        localctx = CSELParser.Arr_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arr_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(CSELParser.LET)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self.id_arr()
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.COLON:
                        self.state = 121
                        self.match(CSELParser.COLON)
                        self.state = 122
                        self.match(CSELParser.DATA_TYPE)


                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.ASSIGN:
                        self.state = 125
                        self.match(CSELParser.ASSIGN)
                        self.state = 126
                        self.exp()


                    self.state = 129
                    self.match(CSELParser.COMMA) 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 136
            self.id_arr()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 137
                self.match(CSELParser.COLON)
                self.state = 138
                self.match(CSELParser.DATA_TYPE)


            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 141
                self.match(CSELParser.ASSIGN)
                self.state = 142
                self.exp()


            self.state = 145
            self.match(CSELParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def ID_CONSTANT(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ID_CONSTANT)
            else:
                return self.getToken(CSELParser.ID_CONSTANT, i)

        def SEMICOLON(self):
            return self.getToken(CSELParser.SEMICOLON, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ASSIGN)
            else:
                return self.getToken(CSELParser.ASSIGN, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ExpContext)
            else:
                return self.getTypedRuleContext(CSELParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COLON)
            else:
                return self.getToken(CSELParser.COLON, i)

        def DATA_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.DATA_TYPE)
            else:
                return self.getToken(CSELParser.DATA_TYPE, i)

        def getRuleIndex(self):
            return CSELParser.RULE_const_dec




    def const_dec(self):

        localctx = CSELParser.Const_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_const_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CSELParser.CONSTANT)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 148
                    self.match(CSELParser.ID_CONSTANT)
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.COLON:
                        self.state = 149
                        self.match(CSELParser.COLON)
                        self.state = 150
                        self.match(CSELParser.DATA_TYPE)


                    self.state = 153
                    self.match(CSELParser.ASSIGN)
                    self.state = 154
                    self.exp()
                    self.state = 156
                    self.match(CSELParser.COMMA) 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 163
            self.match(CSELParser.ID_CONSTANT)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 164
                self.match(CSELParser.COLON)
                self.state = 165
                self.match(CSELParser.DATA_TYPE)


            self.state = 168
            self.match(CSELParser.ASSIGN)
            self.state = 169
            self.exp()
            self.state = 171
            self.match(CSELParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_arr_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def id_arr_const(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Id_arr_constContext)
            else:
                return self.getTypedRuleContext(CSELParser.Id_arr_constContext,i)


        def SEMICOLON(self):
            return self.getToken(CSELParser.SEMICOLON, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ASSIGN)
            else:
                return self.getToken(CSELParser.ASSIGN, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ExpContext)
            else:
                return self.getTypedRuleContext(CSELParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COLON)
            else:
                return self.getToken(CSELParser.COLON, i)

        def DATA_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.DATA_TYPE)
            else:
                return self.getToken(CSELParser.DATA_TYPE, i)

        def getRuleIndex(self):
            return CSELParser.RULE_const_arr_dec




    def const_arr_dec(self):

        localctx = CSELParser.Const_arr_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_arr_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(CSELParser.CONSTANT)
            self.state = 186
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 174
                    self.id_arr_const()
                    self.state = 177
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.COLON:
                        self.state = 175
                        self.match(CSELParser.COLON)
                        self.state = 176
                        self.match(CSELParser.DATA_TYPE)


                    self.state = 179
                    self.match(CSELParser.ASSIGN)
                    self.state = 180
                    self.exp()
                    self.state = 182
                    self.match(CSELParser.COMMA) 
                self.state = 188
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 189
            self.id_arr_const()
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 190
                self.match(CSELParser.COLON)
                self.state = 191
                self.match(CSELParser.DATA_TYPE)


            self.state = 194
            self.match(CSELParser.ASSIGN)
            self.state = 195
            self.exp()
            self.state = 197
            self.match(CSELParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def SEMICOLON(self):
            return self.getToken(CSELParser.SEMICOLON, 0)

        def ID_VARIABLE(self):
            return self.getToken(CSELParser.ID_VARIABLE, 0)

        def id_arr(self):
            return self.getTypedRuleContext(CSELParser.Id_arrContext,0)


        def index_operators(self):
            return self.getTypedRuleContext(CSELParser.Index_operatorsContext,0)


        def key_operators(self):
            return self.getTypedRuleContext(CSELParser.Key_operatorsContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_assignment




    def assignment(self):

        localctx = CSELParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 199
                self.match(CSELParser.ID_VARIABLE)
                pass

            elif la_ == 2:
                self.state = 200
                self.id_arr()
                pass

            elif la_ == 3:
                self.state = 201
                self.index_operators()
                pass

            elif la_ == 4:
                self.state = 202
                self.key_operators()
                pass


            self.state = 205
            self.match(CSELParser.ASSIGN)
            self.state = 206
            self.exp()
            self.state = 207
            self.match(CSELParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
